--- a/mediapipe/python/BUILD
+++ b/mediapipe/python/BUILD
@@ -76,7 +76,7 @@ cc_library(
         "//mediapipe/modules/selfie_segmentation:selfie_segmentation_cpu",
         
         "//mediapipe/modules/pose_detection:pose_detection_gpu",
-        "//mediapipe/modules/pose_landmark:pose_landmark_by_roi_gpu",
-        "//mediapipe/modules/pose_landmark:pose_landmark_gpu",
+        "//mediapipe/gpu:image_frame_to_gpu_buffer_calculator",
+        "//mediapipe/calculators/image:color_convert_calculator",
     ],
 )
